# ElfStaticView

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-tests.yml  release.yml
cmake/: CompilerOptions.cmake  ElfStaticViewConfig.cmake.in  ElfStaticViewTargets.cmake  Format.cmake  InstallRules.cmake  RunClangFormat.cmake  VersionHeader.cmake  resolve_version.cmake
include/elf_static_view/: project.hpp  project_types.hpp
src/: entry.cc  entry.cpp  entry.hpp  main.cpp  win32_main.cc  win32_main.cpp
src/analysis/: address_bias.cpp  address_bias.hpp  expander.cc  expander.cpp  expander.hpp  export_document.cpp  model_json.cpp  model_utils.cc  model_utils.cpp  model_utils.hpp  project.cc  project.cpp  project_summary.cpp  static_address_query.cpp
src/elf/: dwarf_reader.cc  dwarf_reader.cpp  dwarf_reader.hpp  dwarf_wrappers.cpp  dwarf_wrappers.hpp  elf_symbol_table.cpp  elf_symbol_table.hpp  raw_dwarf_reader.cc  raw_dwarf_reader.cpp  raw_dwarf_reader.hpp  ti_coff_object.cc  ti_coff_object.cpp  ti_coff_object.hpp
src/logging/: logger.cpp  logger.hpp
src/platform/: utf8.hpp
src/ui/: app_state.cpp  app_state.hpp  application.cc  application.cpp  application.hpp  file_dialogs.cc  file_dialogs.cpp  file_dialogs.hpp  filter_matcher.cc  filter_matcher.cpp  filter_matcher.hpp  main_window.cpp  main_window.hpp  startup_diagnostics.cc  startup_diagnostics.hpp  ui_task_runner.cpp  ui_task_runner.hpp  version_check.cpp  version_check.hpp
tests/: CMakeLists.txt  Fixtures.cmake  perf_policy_tests.cpp  static_address_query_tests.cpp  test_main.cc  test_main.cpp
tests/fixtures/c/: atomic_type.c  static_vars.c  static_vars.expected.json
tests/fixtures/c/multi_cu/: main.c  unit_a.c  unit_b.c
tests/fixtures/cpp/: abstract_origin_values.cc  abstract_origin_values.cpp  bit_piece_gcc.cc  bit_piece_gcc.cpp  class_array_nested_expand.cpp  const_value_piece.cpp  debug_sup_minimal.cpp  dwarf5_loclists.cpp  dwarf5_strx_type_unit.cpp  inline_scope_static.cc  inline_scope_static.cpp  piece_stack_value.cpp  ref_sig8_debug_types.cc  ref_sig8_debug_types.cpp  specification_static.cc  specification_static.cpp  split_dwarf_static.cc  split_dwarf_static.cpp  static_vars.cpp  static_vars.expected.json  static_vars.expected.md  thread_local_tls.cpp  unspecified_type.cpp
tests/fixtures/helpers/: debug_sup_form_builder.cpp
tests/fixtures/scripts/: build_debug_sup_sidecar.ps1  debug_sup_form_builder.cpp  patch_addrx_to_gnu_addr_index.ps1  patch_debug_types_name_indirect.ps1  patch_dwarf5_addrx_form.ps1  patch_dwarf5_strx_form.ps1  patch_fixture.py  patch_gcc_gnu_altlink.ps1  patch_gcc_ref4_to_ref_addr.ps1  patch_gcc_ref4_to_ref_sup4.ps1  patch_gcc_ref4_to_small_ref.ps1  patch_gcc_ref8_to_ref_sup8.ps1  patch_gcc_strp_to_strp_sup.ps1  patch_loclists_base_addressx.ps1  patch_loclists_base_default.ps1  patch_loclists_start_end.ps1  patch_loclists_start_length.ps1  patch_loclists_startx_endx.ps1  patch_loclists_startx_length.ps1  patch_ranges_to_rnglistx.ps1  patch_ref_sig8_debug_types.ps1  patch_rnglists_base_addressx.ps1  patch_rnglists_offset_pair.ps1  patch_rnglists_start_end.ps1  patch_rnglists_startx_endx.ps1  patch_rnglists_startx_length.ps1  patch_type_unit_abbrev_offset.ps1
tests/package_find/: CMakeLists.txt  main.cpp
tests/package_subdir/: CMakeLists.txt  main.cpp
